# docs/frontleaves_yggleaf_swagger.yaml
@@ -3782,6 +3782,28 @@ paths:
       summary: '[公开] Shaderpacks 元数据'
       tags:
       - 同步接口
+  /sync/tacz/metadata:
+    get:
+      description: 扫描服务端 tacz 目录下所有 .zip 文件（不递归子目录），返回文件列表及 SHA-256 哈希
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/xBase.BaseResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/sync.SyncMetadataResponse'
+              type: object
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/xBase.BaseResponse'
+      summary: '[公开] Tacz 元数据'
+      tags:
+      - 同步接口
   /user/game-password:
     put:
       consumes:
