# internal/app/route/route_sync.go
@@ -15,6 +15,7 @@ func (r *route) syncRouter(route gin.IRouter) {
 		syncGroup.GET("/scripts/metadata", syncHandler.ScriptsMetadata)
 		syncGroup.GET("/resourcepacks/metadata", syncHandler.ResourcepacksMetadata)
 		syncGroup.GET("/shaderpacks/metadata", syncHandler.ShaderpacksMetadata)
+		syncGroup.GET("/tacz/metadata", syncHandler.TaczMetadata)
 		syncGroup.GET("/extends/metadata", syncHandler.ExtendsMetadata)
 		syncGroup.GET("/download", syncHandler.Download)
 	}
